--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,19 @@
-version: "3"
-
+version: '3.4'
 services:
-    app:
-        image: node:20
-        volumes:
-          - .:/usr/src/app
-        working_dir: /usr/src/app
-        ports:
-          - 8080:8080
-        command: npm start
+  myapp:
+    container_name: ts-node-docker-starter
+    restart: always
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+      args:
+        - PORT = ${PORT}
+    ports:
+      - 3001:${PORT}
+    env_file:
+      - .env
+    volumes:
+      - ./:/usr/local/apps/myapp/dev
+      - ignore:/usr/local/apps/myapp/dev/node_modules/
+volumes:
+  ignore:
